overflow bug fixed

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,7 @@
 html {
   font-family: "Glyphicons Halflings";
   background: #52aff7;
+  overflow-x: hidden;
   body {
     background: #52aff7;
     overflow-x: hidden;
